--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
-streamlit
-pandas
-gspread
-google-auth
-reportlab
-plotly        
-matplotlib
-numpy
-pyperclip
-traceback
+# Core
+streamlit==1.29.0
+pandas==2.0.3
+
+# Google Sheets
+gspread==5.11.3
+google-auth==2.22.0
+
+# Visualization
+matplotlib==3.7.2
+plotly==5.15.0
+
+# Optional
+pyperclip==1.8.2
+pytz==2023.3
