--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,9 @@
-# Core
-streamlit==1.29.0
-pandas==2.0.3
-
-# Google Sheets
-gspread==5.11.3
-google-auth==2.22.0
-
-# Visualization
-matplotlib==3.7.2
-plotly==5.15.0
-
-# Optional
-pyperclip==1.8.2
-pytz==2023.3
+streamlit==1.47.0
+pandas==2.3.1
+gspread==6.2.1
+google-auth==2.40.3
+plotly==6.2.0
+matplotlib==3.10.3
+numpy==2.3.1
+pyperclip==1.9.0
+pytz==2024.1
